[package]
name = "rlsl"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc = {path = "compiler/rust/src/librustc"}
rustc_driver = {path = "compiler/rust/src/librustc_driver"}
syntax = {path = "compiler/rust/src/libsyntax"}
syntax_pos = {path = "compiler/rust/src/libsyntax_pos"}


[dependencies]
#getopts = "*"
debugit = "*"
