[package]
name = "rlsl"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc = {path = "compiler/rust/src/librustc"}
rustc_driver = {path = "compiler/rust/src/librustc_driver"}
syntax = {path = "compiler/rust/src/libsyntax"}
syntax_pos = {path = "compiler/rust/src/libsyntax_pos"}
getopts = "0.2.14"
env_logger = "0.4.3"


[dependencies]
#getopts = "*"
debugit = "*"
rspirv = {git = "https://github.com/google/rspirv.git", branch = "master" }
spirv_headers = {git = "https://github.com/google/rspirv.git", branch = "master" }
