[package]
name = "rlsl-test"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]
edition = "2018"

[dependencies]
gfx-hal = {git = "https://github.com/MaikKlein/gfx-rs"}
gfx-backend-vulkan = {git = "https://github.com/MaikKlein/gfx-rs"}
issues = {path = "../issues"}
quickcheck = "0.6"
rlsl-test-macro = {path = "../rlsl-test-macro"}
