[package]
name = "quad"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]

[dependencies]

gfx-hal = {git = "https://github.com/MaikKlein/gfx-rs.git"}
gfx-backend-vulkan = {git = "https://github.com/MaikKlein/gfx-rs.git"}
env_logger = "0.5"
image = "0.15"
log = "0.4"
winit = "0.10"
